--- a/AIDL_example/app/src/main/res/layout/activity_main.xml
+++ b/AIDL_example/app/src/main/res/layout/activity_main.xml
@@ -9,12 +9,83 @@
     tools:context="com.mvp.libin.aidl_example.MainActivity">
 
     <TextView
+        android:id="@+id/tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Hello World!"
+        tools:layout_constraintTop_creator="1"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintBottom_creator="1"
         app:layout_constraintBottom_toBottomOf="@+id/activity_main"
-        app:layout_constraintLeft_toLeftOf="@+id/activity_main"
         app:layout_constraintRight_toRightOf="@+id/activity_main"
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toLeftOf="@+id/activity_main"
         app:layout_constraintTop_toTopOf="@+id/activity_main" />
+
+    <Button
+        android:text="开户"
+        android:layout_width="91dp"
+        android:layout_height="51dp"
+        android:id="@+id/b1"
+        android:layout_marginStart="40dp"
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toLeftOf="@+id/activity_main"
+        android:layout_marginLeft="40dp"
+        app:layout_constraintRight_toLeftOf="@+id/b3"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintHorizontal_bias="0.08"
+        tools:layout_constraintTop_creator="1"
+        android:layout_marginTop="64dp"
+        app:layout_constraintTop_toTopOf="@+id/activity_main" />
+
+    <Button
+        android:text="存钱"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/b2"
+        tools:layout_constraintBottom_creator="1"
+        android:layout_marginStart="40dp"
+        app:layout_constraintBottom_toBottomOf="@+id/activity_main"
+        tools:layout_constraintLeft_creator="1"
+        android:layout_marginBottom="72dp"
+        app:layout_constraintLeft_toLeftOf="@+id/activity_main"
+        android:layout_marginLeft="40dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/b1"
+        app:layout_constraintVertical_bias="0.96"
+        app:layout_constraintRight_toLeftOf="@+id/b4"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintHorizontal_bias="0.03" />
+
+    <Button
+        android:text="取钱"
+        android:layout_width="91dp"
+        android:layout_height="0dp"
+        android:id="@+id/b3"
+        tools:layout_constraintRight_creator="1"
+        android:layout_marginEnd="32dp"
+        app:layout_constraintRight_toRightOf="@+id/activity_main"
+        android:layout_marginRight="32dp"
+        tools:layout_constraintTop_creator="1"
+        android:layout_marginTop="63dp"
+        app:layout_constraintTop_toTopOf="@+id/activity_main" />
+
+    <Button
+        android:text="注销"
+        android:layout_width="91dp"
+        android:layout_height="51dp"
+        android:id="@+id/b4"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintBottom_creator="1"
+        app:layout_constraintBottom_toBottomOf="@+id/activity_main"
+        android:layout_marginEnd="24dp"
+        app:layout_constraintRight_toRightOf="@+id/activity_main"
+        android:layout_marginBottom="64dp"
+        android:layout_marginRight="24dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/b3"
+        app:layout_constraintVertical_bias="0.93" />
 
 </android.support.constraint.ConstraintLayout>
